--- a/style.css
+++ b/style.css
@@ -31,8 +31,7 @@ header{
     top: 0;
     left: 0;
     background: url('assets/HomeImage.jpg');
-    background-size: cover;
-    background-position: 20%;
+    
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
