--- a/style.css
+++ b/style.css
@@ -31,7 +31,12 @@ header{
     top: 0;
     left: 0;
     background: url('assets/HomeImage.jpg');
-    
-    width: 100%;
-    height: 100vh;
+    overflow: hidden;
+    width:100%;
+    height: 100%;
 }
+
+.Subsystems{
+    flex-direction: column;
+}
+
