--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@ p {
     font-family: Helvetica-Neue;
 }
 
-header{
+div.scrolling_text{
+    
     font-family: Formula1-Bold;
     font-weight: 1000;
-    font-size: 100px;
+    font-size: 5rem;
     color:yellow ;
+    object-fit: cover;
+    text-overflow: string;
+    white-space: nowrap;
 }
 
 @font-face {
@@ -26,14 +30,32 @@ header{
     src: url("assets/HelveticaNeueRegular.otf");
 }
 
+
+
 .HomeImage{
+    background-image: url('assets/HomeImage.jpg');
+    background-position: center;
     position: absolute;
-    top: 0;
-    left: 0;
-    background: url('assets/HomeImage.jpg');
-    overflow: hidden;
-    width:100%;
+    max-width: 100%;
+    object-fit: cover;
+    width: auto;
     height: 100%;
+    overflow: hidden;
+}
+
+.overlay_text{
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);  
+    text-align: center;
+}
+
+.logo{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    
 }
 
 .Subsystems{
