--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     margin: 0px;
     padding: 0px;
     background-color: #CA3F3A;
-    overflow-x: hiddn;
+    overflow-x: hidden;
 }
 
 p {
