--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ a {
 }
 
 .HomeImage{
-    background: url('/assets/HomeImage.jpg');
+    background: url('assets/HomeImage.jpg');
     height: 100vh;
     width: 100%;
     background-size: cover;
