--- a/style.css
+++ b/style.css
@@ -32,23 +32,26 @@ p {
 a {
     font-family: Helvetica-Neue;
     font-size: 1.5rem;
+} 
+
+header{
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
 }
 
+.desktop{
 
-.menu{
-    width: 100%;
-    top: 1 rem;
-    right: 1 rem;
-    position: absolute;
-    white-space: nowrap;
-    color:  #CA3F3A; 
+}
 
-    outline: 3px solid lime;
+.mobile{
+    background: url('assets/Group.jpg');
+    
+
+    cursor: pointer;
 }
 
 .HomeStuff{
-    display: flex;
-    flex-wrap: wrap;
     overflow-x: hidden;
     object-fit: cover;
 }
@@ -59,8 +62,7 @@ a {
     width: 100%;
     background-size: cover;
     background-position-x: 50%;
-    height: 100vh;
-    z-index: -1;
+    z-index: -2;
 }
 
 .overlay_text{ /*parent*/
@@ -97,4 +99,6 @@ a {
 .Subsystems{
     flex-direction: column;
 }
+
+
 
