all cards added

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ ul {
 section.home-page {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     color: orange;
     height: 100vh;
 }
@@ -122,8 +123,9 @@ section.home-page {
 }
 .arrow.one {
     position: absolute;
+    width: 100%;
     bottom: 2em;
-    margin-left: 50%;
+    align-self: center;
     cursor: pointer;
 }
 
@@ -151,6 +153,8 @@ section.intro {
     background-size: cover;
     z-index: -2;
     align-self: center;
+}
+div.intro-image+text {
 }
 h1.intro-concordia {
     margin-top: -8rem;
@@ -180,21 +184,23 @@ p.subhead {
 section.subsystems {
     display: flex;
     height: fit-content;
-
     overflow-x: auto;
 }
 .card {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 
-    margin-left: 1.5rem;
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
     border-radius: 25px;
     background: #FFAE03;
     padding: 1.38rem;
-    width: 19.5625rem;
-    height: 35.1875rem;
+    width: 17.5625rem;
+    height: 29.1875rem;
     flex-shrink: 0;
 }
+
 .title {
     color: white;
     position: relative;
@@ -210,14 +216,15 @@ section.subsystems {
 .card-photo {
     background-size: contain;
     height: 12rem;
-    width: 20rem;
     border-radius: 25px;
+    margin-top: -1em;
 }
 .text {
     color: white;
     text-align: justify;
     font-size: 1.3rem;
-    line-height: 2.2rem;
+    margin-top: -1em;
+    height: fit-content;
 }
 
 /*page 3 - contact area*/
@@ -298,7 +305,32 @@ section.footer {
 
 
 
+@media only screen and (max-width: 450px) {
+    .intro-imageAndtext {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    h1.intro-concordia {
+        font-size: 2.6em;
+        margin-left: unset;
+        
+    }
+    p.subhead {
+        margin-left: 1.5rem;
+        margin-right: 1.5em;
+    }
 
+    .c {
+        width: 25em;
+    }
+    .names {
+        width: 21.3em;
+    }
+    .user-name {
+        width: 11em
+    }
+}
 /*for the burger menu*/
 @media only screen and (min-width: 680px) {
     .menu {
@@ -347,6 +379,9 @@ section.footer {
     section.intro {
         flex-direction: row;
         align-items: center;
+    }
+    .logo2 {
+        margin-right: 3em;
     }
     p.subhead {
         font-size: 1.25rem;
