--- a/style.css
+++ b/style.css
@@ -179,6 +179,11 @@ p.subhead {
     cursor: pointer;
 }
 
+/*MEET OUR TEAMS SCROLLING TITLE (FOR DESKTOP), work in progress (neeeds to be changed in the media area*/
+.meetTeams_scrolling {
+    display: none;
+}
+
 /*PAGE 3 - SUBSYSTEMS*/
 section.subsystems {
     display: flex;
@@ -196,7 +201,7 @@ section.subsystems {
     background: #FFAE03;
     padding: 1.38rem;
     width: 17.5625rem;
-    height: 29.1875rem;
+    height: 27.1875rem;
     flex-shrink: 0;
 }
 
@@ -228,8 +233,8 @@ section.subsystems {
     height: fit-content;
 }
 
-/*page 3 - contact area*/
 
+/*page 3 - contact area*/
 section.contact {
     display: flex;
     flex-direction: column;
