--- a/style.css
+++ b/style.css
@@ -138,7 +138,8 @@ span {
 section.intro {
     display: flex;
     justify-content: space-between;
-    height: 100vh;
+    height: fit-content;
+    min-height: 90vh;
     flex-direction: column;
     overflow-x: hidden;
 }
@@ -167,7 +168,7 @@ h1.intro-concordia {
 }
 p.subhead {
     color: white;
-    margin-top: -3rem;
+    margin-top: -1rem;
     margin-right: 3rem;
     margin-left: 3rem;
     font-size: 1rem;
@@ -236,6 +237,41 @@ section.subsystems {
     font-size: 1.31rem;
     margin-top: 60px;
     height: fit-content;
+}
+
+/*Sponsors Section*/
+.sponsors {
+    margin: 1em;
+    margin-top: 4em;
+    height: 30vh;
+    background: #FFAE03;
+    border-radius: 25px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.title.sponsor {
+    font-size: 2rem;
+}
+
+
+/*Meet the team Section*/
+.sponsors {
+    margin: 1em;
+    margin-top: 4em;
+    height: 30vh;
+    background: #FFAE03;
+    border-radius: 25px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.title.sponsor {
+    font-size: 2rem;
 }
 
 
@@ -387,15 +423,25 @@ section.footer {
 
 /*formating for the pages for desktop*/
 @media only screen and (min-width: 900px) {
+
+    /*SUBSYSTEMS REDESIGN FOR DESKTOP*/
+    section.subsystems {
+        
+        height: 90vh;
+        justify-content: space-around;
+    }
     .title.subsystem {
         display: unset;
         font-size: 3.9rem;
         align-self: center;
     }
 
-    section.intro {
+    section.intro.introFrame {
         flex-direction: row;
         align-items: center;
+    }
+    .intro {
+        justify-content: space-between;
     }
     .logo2 {
         margin-right: 3em;
@@ -405,9 +451,7 @@ section.footer {
     }
 
     .arrow.two {
-        position: absolute;
-        margin-left: 49%;
-        margin-top: 45em;
+        
     }
 
 }
